--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ p {
 #navbar a {
   color: #fff;
 }
+
 #navbar h1 {
   float: left;
   padding-top: 20px;
@@ -182,10 +183,17 @@ p {
   text-align: center;
   background-color: #444;
   color: #fff;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 /* About us page */
+
+#about-info {
+  padding: 20px;
+  display: inline-block;
+  width: 100%;
+}
+
 
 #about-info .info-right {
   float: right;
@@ -203,4 +211,38 @@ p {
   float: left;
   width: 50%;
   min-height: 100%;
+  padding-right: 20px;
+}
+
+
+/* Testimonial section */
+
+#testimonials {
+  height: 600px;
+  padding-top: 100px;
+  background-image: url('../img/test-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+#testimonials h2 {
+  color: #fff;
+  text-align: center;
+  padding-bottom: 40px;
+  font-size: 34px; 
+}
+
+#testimonials .testimonial {
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 5px;
+  opacity: .9;
+}
+
+#testimonials .testimonial img {
+  width: 100px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
 }
